--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -1,2 +1,6 @@
+
 <%= link_to 'login', new_user_session_path, class: "btn btn-primary" %>
 <%= link_to 'register', new_user_registration_path, class: "btn btn-primary" %>
+
+<%= link_to 'logout', destroy_user_session_path, method: :delete %>
+
