--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,5 +12,6 @@
   <body>
     <%= yield %>
     <%= javascript_include_tag 'application' %>
+    <%= render '../views/partials/footer' %>
   </body>
 </html>
