--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,6 @@
 <h2>Homepage, user: <%= current_user.user_name %></h2>
+<% @items.each do |item| %>
+<%= item.name %>
+<% end %>
 <%= link_to 'logout', destroy_user_session_path, method: :delete %>
 <%= link_to 'Edit', edit_user_registration_path %>
