--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -12,9 +12,9 @@
 <div id="footer">
   <div class="col-xs-12 navbar-inverse navbar-fixed-bottom">
   <div class="row" id="bottomNav">
-    <div class="col-xs-3 text-center"><a href="#"><i class="glyphicon glyphicon-search"></i><br>Search</a></div>
-    <div class="col-xs-3 text-center"><a href="#"><i class="glyphicon glyphicon-home"></i><br>Home</a></div>
-    <div class="col-xs-3 text-center"><a href="#"><i class="glyphicon glyphicon-user"></i><br>Profile</a></div>
-    <div class="col-xs-3 text-center"><a href="#"><i class="glyphicon glyphicon-cog"></i><br>Settings</a></div>
+    <div class="col-xs-3 text-center"><a href="#"><i class="glyphicon glyphicon-search"></i></a></div>
+    <div class="col-xs-3 text-center"><a href="#"><i class="glyphicon glyphicon-home"></i></a></div>
+    <div class="col-xs-3 text-center"><a href="#"><i class="glyphicon glyphicon-user"></i></a></div>
+    <div class="col-xs-3 text-center"><a href="#"><i class="glyphicon glyphicon-cog"></i></a></div>
   </div>
   </div>
