Add some changes to the landing page, header and footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
   </head>
   <body>
+    <%= render '../views/partials/header' %>
     <%= yield %>
     <%= javascript_include_tag 'application' %>
     <%= render '../views/partials/footer' %>
