--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -3,4 +3,8 @@
 <%= link_to 'register', new_user_registration_path, class: "btn btn-primary" %>
 
 
-
+<!-- @items.each do item
+  item.name
+  link_to "like this item", item_likes_path(item), method: post
+end
+ -->
