--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -13,7 +13,7 @@
   <div class="col-xs-12 navbar-inverse navbar-fixed-bottom">
   <div class="row" id="bottomNav">
     <div class="col-xs-3 text-center"><a href="#"><i class="glyphicon glyphicon-search"></i></a></div>
-    <div class="col-xs-3 text-center"><a href="#"><i class="glyphicon glyphicon-home"></i></a></div>
+    <div class="col-xs-3 text-center"><a href="#swipe"><i class="glyphicon glyphicon-home"></i></a></div>
     <div class="col-xs-3 text-center"><a href="#"><i class="glyphicon glyphicon-user"></i></a></div>
     <div class="col-xs-3 text-center"><a href="#"><i class="glyphicon glyphicon-cog"></i></a></div>
   </div>
