--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,7 +9,15 @@
 <%= item.description %><br/>
 <%= item.gender %><br/>
 <%= item.item_likes.count %> likes
+
+
+  <%= link_to 'like', item_item_likes_path(item), method: :post %>
+
+
 <% end %>
+
+
+
 
 
 
