--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,1 +1,22 @@
-<h1>Show Item</h1>
+
+<div class="row">
+        <div class="col s12 m7">
+          <div class="card">
+            <div class="card-image">
+              <img src="images/sample-1.jpg">
+              <span class="card-title"> <%= @item.name %></span>
+            </div>
+            <div class="card-content">
+              <p><%= @item.description %></p>
+            </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+              <a <%= link_to 'Back', root_path %> </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+<h1> <%= @item.name %> </h1>
+<p> <%= @item.description %> </p>
+<%= link_to 'Back', root_path %>
