--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -49,7 +49,7 @@ body {
     float:none;
 }
 #bottomNav {
-  padding:6px;
+  padding:4px;
 }
 #bottomNav a {
     font-size:24pt;
@@ -58,4 +58,9 @@ body {
 }
 #bottomNav a:hover {
     color:#fff;
+}
+
+#container {
+   min-height:100%;
+   position:relative;
 }
