--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,9 +1,12 @@
-<div id="footer">
-  <div class="col-xs-12 navbar-inverse navbar-fixed-bottom">
-  <div class="row" id="bottomNav">
-    <div class="col-xs-3 text-center"><a href="#"><i class="glyphicon glyphicon-search"></i></a></div>
-    <div class="col-xs-3 text-center"><a href="#home"><i class="glyphicon glyphicon-home"></i></a></div>
-    <div class="col-xs-3 text-center"><a href="#"><i class="glyphicon glyphicon-user"></i></a></div>
-    <div class="col-xs-3 text-center"><a href="#"><i class="glyphicon glyphicon-cog"></i></a></div>
+<footer class="page-footer" id="footer">
+  <div class="footer-copyright">
+    <div class="container">
+    <div class="row center-align footer-icon">
+      <div class="col s3"><a href="#"><i class="glyphicon social-icon glyphicon-search"></i></a></div>
+      <div class="col s3"><a href="#home"><i class="glyphicon social-icon glyphicon-home"></i></a></div>
+      <div class="col s3"><a href="#"><i class="glyphicon social-icon glyphicon-user"></i></a></div>
+      <div class="col s3"><a href="#"><i class="glyphicon social-icon glyphicon-cog"></i></a></div>
+    </div>
+    </div>
   </div>
-  </div>
+</footer>
