--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,4 +1,6 @@
-<div class="card">
+<div class="row">
+  <div class="col s12 m6">
+  <div class="card sticky-action">
     <div class="card-image waves-effect waves-block waves-light">
       <img class="activator" src="images/office.jpg">
     </div>
@@ -10,59 +12,19 @@
       <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
       <p>Here is some more information about this product that is only revealed once clicked on.</p>
     </div>
+    <div class="card-action">
+        <a href="#">This is a link</a>
+        <a href="#">This is a link</a>
+    </div>
   </div>
-
+  </div>
+</div>
 
 <div class="row">
-        <div class="col s12 m7">
-          <div class="card">
-            <div class="card-image">
-              <img src="http://cdn-r2.unilad.co.uk/wp-content/uploads/2015/05/borat_mankini.jpg">
-              <span class="card-title"> <%= @item.name %></span>
-            </div>
-            <div class="card-content">
-            <h3> <%= @item.name %> </h3>
-              <p><%= @item.description %></p>
-            </div>
-            <div class="card-action">
-              <a href="#">Like</a>
-              <a <%= link_to 'Back', root_path %> </a>
-            </div>
-          </div>
-        </div>
-      </div>
-<div class="row">
-        <div class="col s12 m7">
-<div class="card">
+  <div class="col s12 m6">
+  <div class="card sticky-action">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="http://cdn-r2.unilad.co.uk/wp-content/uploads/2015/05/borat_mankini.jpg">
-    </div>
-    <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"><%= @item.name %><i class="material-icons right">more_vert</i></span>
-      <h3> <%= @item.name %> </h3>
-              <p><%= @item.description %></p>
-            </div>
-            <div class="card-action">
-              <a href="#">Like</a>
-              <a <%= link_to 'Back', root_path %> </a>
-            </div>
-    </div>
-    <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-      <h3> <%= @item.name %> </h3>
-      <p><%= @item.description %></p>
-    </div>
-  </div>
-   </div>
-  </div>
-
-<div class="row">
-        <div class="col s12 m7">
-<div class="card sticky-action">
-<div class="card small">
- <div class="card">
-    <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="http://cdn-r2.unilad.co.uk/wp-content/uploads/2015/05/borat_mankini.jpg">
+      <img class="activator" src="images/office.jpg">
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
@@ -72,8 +34,77 @@
       <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
       <p>Here is some more information about this product that is only revealed once clicked on.</p>
     </div>
+    <div class="card-action">
+        <a href="#">This is a link</a>
+        <a href="#">This is a link</a>
+    </div>
+  </div>
   </div>
 </div>
-</div>
- </div>
+
+<div class="row">
+  <div class="col s12 m6">
+  <div class="card sticky-action">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="images/office.jpg">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+      <p><a href="#">This is a link</a></p>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+      <p>Here is some more information about this product that is only revealed once clicked on.</p>
+    </div>
+    <div class="card-action">
+        <a href="#">This is a link</a>
+        <a href="#">This is a link</a>
+    </div>
   </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col s12 m6">
+  <div class="card sticky-action">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="images/office.jpg">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+      <p><a href="#">This is a link</a></p>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+      <p>Here is some more information about this product that is only revealed once clicked on.</p>
+    </div>
+    <div class="card-action">
+        <a href="#">This is a link</a>
+        <a href="#">This is a link</a>
+    </div>
+  </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col s12 m6">
+  <div class="card sticky-action">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="images/office.jpg">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+      <p><a href="#">This is a link</a></p>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+      <p>Here is some more information about this product that is only revealed once clicked on.</p>
+    </div>
+    <div class="card-action">
+        <a href="#">This is a link</a>
+        <a href="#">This is a link</a>
+    </div>
+  </div>
+  </div>
+</div>
+
