--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -3,8 +3,8 @@
     <div class="container">
     <div class="row center-align footer-icon">
       <div class="col s3"><a href="#"><i class="glyphicon social-icon glyphicon-search"></i></a></div>
-      <div class="col s3"><a href="#home"><i class="glyphicon social-icon glyphicon-home"></i></a></div>
-      <div class="col s3"><a href="#"><i class="glyphicon social-icon glyphicon-user"></i></a></div>
+      <div class="col s3"><a href="/home"><i class="glyphicon social-icon glyphicon-home"></i></a></div>
+      <div class="col s3"><a href=""><i class="glyphicon social-icon glyphicon-user"></i></a></div>
       <div class="col s3"><a href="#"><i class="glyphicon social-icon glyphicon-cog"></i></a></div>
     </div>
     </div>
