--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,15 +1,14 @@
-<%= form_tag(home_path, :method => "get", id: "search-form") do %>
-    <%= text_field_tag :search, params[:search], placeholder: "Search Items" %>
-    <%= text_field_tag :min_price %>
-    <%= text_field_tag :max_price %>
-    <%= submit_tag "Search", :name => nil %>
-<% end %>
-
-
 
 <h2>Homepage, user: <%= current_user.user_name %><br/></h2>
-<h6><%= link_to 'logout', destroy_user_session_path, method: :delete %><br/>
+<h6><%= link_to 'logout', destroy_user_session_path, method: :delete %> |
 <%= link_to 'Edit', edit_user_registration_path %></h6>
+
+<%= form_tag(home_path, :method => "get", id: "search-form") do %>
+    <%= text_field_tag :search, params[:search], placeholder: "Search Items" %>
+    <%= text_field_tag :min_price, params[:search], placeholder: "Min Price" %>
+    <%= text_field_tag :max_price, params[:search], placeholder: "Max Price" %>
+    <%= submit_tag "Search", :name => nil %>
+<% end %>
 
 
 <% @items.each do |item| %>
