--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -2,10 +2,31 @@
   <div class="footer-copyright">
     <div class="container">
     <div class="row center-align footer-icon">
-      <div class="col s3"><a href="#"><i class="glyphicon social-icon glyphicon-search"></i></a></div>
-      <div class="col s3"><a href="/home"><i class="glyphicon social-icon glyphicon-home"></i></a></div>
-      <div class="col s3"><a href=""><i class="glyphicon social-icon glyphicon-user"></i></a></div>
-      <div class="col s3"><a href="#"><i class="glyphicon social-icon glyphicon-cog"></i></a></div>
+
+    <div class="col s3">
+    <%= link_to search_path do %>
+      <i class="glyphicon social-icon glyphicon-search"></i>
+      </div>
+      <% end %>
+
+      <div class="col s3">
+      <%= link_to home_path do %>
+     <i class="glyphicon social-icon glyphicon-home"></i>
+      </div>
+      <% end %>
+
+       <div class="col s3">
+      <%= link_to user_path(current_user) do %>
+     <i class="glyphicon social-icon glyphicon-user"></i>
+      </div>
+      <% end %>
+
+         <div class="col s3">
+      <%= link_to edit_user_registration_path do %>
+     <i class="glyphicon social-icon glyphicon-cog"></i>
+      </div>
+      <% end %>
+
     </div>
     </div>
   </div>
