--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -1,6 +1,12 @@
+<%= render 'layouts/cover_video' %>
+<div class="row">
+  <div class="col m6 s12 offset-m3 center">
 
-<%= link_to 'login', new_user_session_path, class: "btn btn-primary" %>
-<%= link_to 'register', new_user_registration_path, class: "btn btn-primary" %>
+    <%= link_to 'login', new_user_session_path, class: "btn btn-primary" %>
+    <%= link_to 'register', new_user_registration_path, class: "btn btn-primary" %>
+
+  </div>
+</div>
 
 
 <!-- @items.each do item
