Solved search functionality in searchpage

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,6 +1,20 @@
-<h1>All Clothes</h1>
+<h1>Listing Clothes</h1>
 
+<%= form_tag items_path, method: 'get' do %>
+<%= text_field_tag :search, params[:search] %>
+<%= submit_tag "search" %>
+<% end %>
 
-
+<% @items.each do |item| %>
+<%= item.tumbnail_img %><br/>
+<%= item.name %><br/>
+<%= item.price %> $<br/>
+<%= item.description %><br/>
+<%= item.gender %><br/>
+<%= item.item_likes.count %> likes<br/>
+  <%= link_to 'like', item_item_likes_path(item), method: :post %>
+  <%= link_to 'unlike', item_item_like_path(item, item.item_likes), method: :delete %><br/>
+  <br/>
+<% end %>
 
 
