--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,21 +1,44 @@
-
 <h2>Homepage, user: <%= current_user.user_name %><br/></h2>
 
+<% if !@search.nil? %>
+<% @search.search_items.each do |c| %>
+  <br/>
+  <%= c.tumbnail_img %><br/>
+  <h1><%= c.name %><br/></h1>
+  <p>Price: $<%= c.price %> $<br/></p>
+  <p><%= c.description %><br/></p>
+  <p><%= c.gender %><br/></p>
+  <p><%= c.item_likes.count %> likes<br/></p>
+  <%= link_to 'like', item_item_likes_path(c), method: :post %>
+  <%= link_to 'unlike', item_item_like_path(c, c.item_likes), method: :delete %><br/>
+  <% end %>
 
+  <% else %>
 
-
-<% @items.each do |item| %>
-<%= item.tumbnail_img %><br/>
-<%= item.name %><br/>
-<%= item.price %> $<br/>
-<%= item.description %><br/>
-<%= item.gender %><br/>
-<%= item.item_likes.count %> likes<br/>
+ <% @items.each do |item| %>
+ <%= item.tumbnail_img %><br/>
+<h1><%= item.name %><br/></h1>
+<p>Price: $<%= item.price %> $<br/></p>
+<p><%= item.description %><br/></p>
+<p><%= item.gender %><br/></p>
+  <%= item.item_likes.count %> likes<br/>
   <%= link_to 'like', item_item_likes_path(item), method: :post %>
   <%= link_to 'unlike', item_item_like_path(item, item.item_likes), method: :delete %><br/>
   <br/>
+  <% end %>
 
 <% end %>
+
+
+
+
+
+
+
+
+
+
+
 
 
 
