--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,7 +4,7 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <div class="progress">
-    <div class="determinate" style="width: <% %>"></div>
+    <div class="determinate" style="width: <%= user_account_progress(current_user) %>% "></div>
 </div>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
@@ -26,10 +26,17 @@
     <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
     <%= f.input :password_confirmation, required: false %>
     <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
-    <%= f.input :top_size, required: true, hint: "Enter your top-size top optimise the cards" %>
-    <%= f.input :bottom_size, required: true, hint: "Enter your bottom-size top optimise the cards" %>
-    <%= f.input :shoe_size, required: true, hint: "Enter your shoe-size top optimise the cards" %>
+    <%= f.input :top_size, required: true, hint: "Enter your top-size to optimise the cards" %>
+    <%= f.input :bottom_size, required: true, hint: "Enter your bottom-size to optimise the cards" %>
+    <%= f.input :shoe_size, required: true, hint: "Enter your shoe-size to optimise the cards" %>
   </div>
+
+  <div class="form-actions">
+    <%= f.button :submit, "Update" %>
+  </div>
+<% end %>
+
+<h3>Cancel my account</h3>
 
     <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
@@ -38,5 +45,3 @@
 
   </div>
 </div>
-
-
