--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -14,6 +14,7 @@
   <p>Price: $<%= c.price %> $<br/></p>
   <p><%= c.description %><br/></p>
   <p><%= c.gender %><br/></p>
+  <p><%= c.brand.name %><br/></p>
   <p><%= c.item_likes.count %> likes<br/></p>
   <%= link_to 'like', item_item_likes_path(c), method: :post %>
   <%= link_to 'unlike', item_item_like_path(c, c.item_likes), method: :delete %><br/>
@@ -31,6 +32,7 @@
 <p>Price: $<%= item.price %> $<br/></p>
 <p><%= item.description %><br/></p>
 <p><%= item.gender %><br/></p>
+<p><%= item.brand.name %><br/></p>
   <%= item.item_likes.count %> likes<br/>
   <%= link_to 'like', item_item_likes_path(item), method: :post %>
   <%= link_to 'unlike', item_item_like_path(item, item.item_likes), method: :delete %><br/>
