Add Name search field

--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -4,7 +4,7 @@
       <div class="container">
       <div class="row center-align footer-icon">
     <div class="col s3">
-    <%= link_to new_searches_path do %>
+    <%= link_to searches_path do %>
       <i class="glyphicon social-icon glyphicon-search"></i>
       </div>
       <% end %>
