--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,8 +1,7 @@
 <h1>Listing Clothes</h1>
 
 
-
-<% @items.each do |item| %>
+<% @search_items.each do |item| %>
 <%= item.tumbnail_img %><br/>
 <%= item.name %><br/>
 <%= item.price %> $<br/>
@@ -10,9 +9,13 @@
 <%= item.gender %><br/>
 <%= item.brand.name %><br/>
 <%= item.colors.map(&:name).join(', ') %><br/>
-<%= item.item_likes.count %> likes<br/>
-  <%= link_to 'like', item_item_likes_path(item), method: :post %>
-  <%= link_to 'unlike', item_item_like_path(item, item.item_likes), method: :delete %><br/>
+<% item_like = current_user.item_likes.find{ |item_like| item_like if item_like.item_id == item.id} %>
+  <%= item.item_likes.count %> likes<br/>
+  <% if item_like.nil? %>
+  <%= link_to 'like', item_item_likes_path(item.id, item_like), method: :post %>
+  <% else %>
+  <%= link_to 'unlike', item_item_like_path(item.id, item_like), method: :delete %><br/>
+  <% end %>
   <br/>
 <% end %>
 
