--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Search Page</h1>
 
-<%= search_form_for @q do |f| %>
+<%= search_form_for @q, url: home_path do |f| %>
 
   <%= f.label "Name" %>
   <%= f.search_field :name_cont %>
