--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,65 +1,34 @@
-
 <div class="row">
   <div class="col m6 offset-m3 center container-full-width">
-
-<h2>Homepage, user: <%= current_user.user_name %><br/></h2>
-
-<% if !@search.nil? %>
-<div class="items">
-<% @search.search_items.each do |c| %>
-  <br/>
-  <div class="item">
-  <%= c.tumbnail_img %><br/>
-  <h1><%= c.name %><br/></h1>
-  <p>Price: $<%= c.price %> $<br/></p>
-  <p><%= c.description %><br/></p>
-  <p><%= c.gender %><br/></p>
-  <p><%= c.brand.name %><br/></p>
-  <p><%= c.colors.name %><br/></p>
-<% item_like = current_user.item_likes.find{ |item_like| item_like if item_like.item_id == c.id} %>
-  <p><%= c.item_likes.count %> likes<br/></p>
-    <% if item_like.nil? %>
-
-  <%= link_to 'like', item_item_likes_path(c.id, item_like), method: :post %>
-  <% else %>
-  <%= link_to 'unlike', item_item_like_path(c.id, item_like), method: :delete %><br/>
- <% end %>
+    <h2>Homepage, user: <%= current_user.user_name %><br/></h2>
+    <div class="items">
+    <% @items.each do |c| %>
+      <br/>
+      <div class="item">
+        <%= c.tumbnail_img %><br/>
+        <h1><%= c.name %><br/></h1>
+        <p>Price: $<%= c.price %> $<br/></p>
+        <p><%= c.description %><br/></p>
+        <p><%= c.gender %><br/></p>
+        <p><%= c.brand.name %><br/></p>
+        <p><%= c.colors.name %><br/></p>
+        <% item_like = current_user.item_likes.find{ |item_like| item_like if item_like.item_id == c.id} %>
+        <p><%= c.item_likes.count %> likes<br/></p>
+        <% if item_like.nil? %>
+          <%= link_to 'like', item_item_likes_path(c.id, item_like), method: :post %>
+        <% else %>
+          <%= link_to 'unlike', item_item_like_path(c.id, item_like), method: :delete %><br/>
+        <% end %>
+      </div>
+    <% end %>
+    </div>
   </div>
-  <% end %>
-</div>
-
-
-  <% else %>
-<div class="items">
- <% @items.each do |item| %>
- <div class="item">
- <%= item.tumbnail_img %><br/>
-<h1><%= item.name %><br/></h1>
-<p>Price: $<%= item.price %> $<br/></p>
-<p><%= item.description %><br/></p>
-<p><%= item.gender %><br/></p>
-<p><%= item.brand.name %><br/></p>
-<p><%= item.colors.name %><br/></p>
-<% item_like = current_user.item_likes.find{ |item_like| item_like if item_like.item_id == item.id} %>
-  <%= item.item_likes.count %> likes<br/>
-  <% if item_like.nil? %>
-  <%= link_to 'like', item_item_likes_path(item.id, item_like), method: :post %>
-  <% else %>
-  <%= link_to 'unlike', item_item_like_path(item.id, item_like), method: :delete %><br/>
-  <% end %>
-  <br/>
-  </div>
-  <% end %>
-</div>
-<% end %>
- </div>
 </div>
 
 
 
 
-
-
+<%# raise %>
 
 
 
