--- a/app/views/layouts/_cover_video.html.erb
+++ b/app/views/layouts/_cover_video.html.erb
@@ -1,4 +1,4 @@
-<div class="homepage-hero-module">
+<div class="homepage-hero-module full-screen-video" style="position: fixed">
     <div class="video-container">
         <div class="filter"></div>
         <video autoplay loop class="fillWidth">
