--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,7 +14,7 @@
         <%= f.input :last_name, required: true %>
         <%= f.input :user_name, required: true %>
         <%= f.input :address, required: true %>
-        <%= f.input :gender, required: true %>
+        <%= f.input :gender, required: true, :collection => %w[Male Female] %>
         <%= f.input :birth_date, required: true %>
         <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
         <%= f.input :password_confirmation, required: true %>
