--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,6 +3,13 @@
 
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
+<% unless current_user.uptodate? %>
+<div class="alert alert-danger">
+  Update your sizes to have a better experience.
+</div>
+
+<% end %>
+
 <div class="progress">
     <div class="determinate" style="width: <%= user_account_progress(current_user) %>% "></div>
 </div>
@@ -24,9 +31,9 @@
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
 
-    <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
+    <%= f.input :password, autocomplete: "off", include_blank: "leave it blank if you don't want to change it", required: false %>
     <%= f.input :password_confirmation, required: false %>
-    <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
+    <%= f.input :current_password, include_blank: "we need your current password to confirm your changes", required: true %>
 
     <a class="modal-trigger waves-effect waves-light btn" href="#modal1">Edit personal sizes</a>
   </div>
@@ -72,21 +79,19 @@
     <h5>Swimsuit size</h5>
     <%= f.input :swimsuit_size, required: true, :collection => %w[XS S M L XL], include_blank: "Enter your Swimsuit-size to optimise the cards" %>
 
-
+    <% if current_user.female? %>
     <p class="range-field">
       <h5>Dress size</h5>
         <output name="dressOutputName" id="userdressOutput"><%=current_user.dress_size%></output>
         <input class="form-control string required" required="required" aria-required="true" type="range" name="user[dress_size]" id="user_dress_size" min="30" max="50" value="<%current_user.dress_size%>" oninput= "userdressOutput.value = user_dress_size.value">
     </p>
-
+    <% end %>
 
     <p class="range-field">
       <h5>Bottom size</h5>
         <output name="bottomOutputName" id="userbottomOutput"><%=current_user.bottom_size%></output>
         <input class="form-control string required" required="required" aria-required="true" type="range" name="user[bottom_size]" id="user_bottom_size" min="30" max="50" value="<%current_user.bottom_size%>" oninput= "userbottomOutput.value = user_bottom_size.value">
     </p>
-
-
 
 
     <p class="range-field">
