--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -33,7 +33,7 @@
   <%= f.search_field :shop_city_eq %>
 
   <%= f.label "Size" %>
-  <%= f.search_field :sizes_selection_eq %>
+  <%= f.search_field :sizes_value_eq %>
 
 
   <%= f.submit %>
