--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -13,7 +13,8 @@
 <br/>
     <%= link_to 'login', new_user_session_path, class: "btn btn-primary" %>
     <%= link_to 'register', new_user_registration_path, class: "btn btn-primary" %>
-
+<%= link_to "Sign up with Facebook", user_facebook_omniauth_authorize_path,
+    class: "btn blue darken-4" %>
   </div>
 </div>
 
