--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -118,3 +118,70 @@ textarea.materialize-textarea {
 // .input-field-form{
 //   background-color: white;
 // }
+
+
+
+
+/*Landing page styling of moving letters */
+
+.letter-container h2 p {
+  color: grey;
+  text-align: center;
+  font-size: 40px;
+  line-height: 160px;
+  display: block;
+  padding-bottom: 30px;
+  mask: image-url("mask.png") repeat;
+}
+.letters-container {
+  z-index: 8000;
+}
+
+.letter-container h2 p span {
+  font-size: 60px;
+    opacity: 1;
+    text-shadow: 0px 0px 2px #fff, 1px 1px 4px rgba(0,0,0,0.7);
+  transition: all 0.3s linear;
+  animation: sharpen 0.9s linear backwards;
+}
+.letter-container h2 p span:hover{
+  text-shadow: 0px 0px 40px #fff;
+}
+.letter-container h2 p span:nth-child(1) {
+  animation-delay: 0s;
+}
+.letter-container h2 p span:nth-child(2) {
+  animation-delay: 0.1s;
+}
+.letter-container h2 p span:nth-child(3) {
+  animation-delay: 0.2s;
+}
+.letter-container h2 p span:nth-child(4) {
+  animation-delay: 0.3s;
+}
+.letter-container h2 p span:nth-child(5) {
+  animation-delay: 0.4s;
+}
+/* ...and so on for all the letters */
+
+@keyframes sharpen {
+ 0% {
+    opacity: 0;
+    text-shadow: 0px 0px 100px #fff;
+    color: transparent;
+ }
+ 90% {
+    opacity: 0.9;
+    text-shadow: 0px 0px 10px #fff;
+    color: transparent;
+ }
+ 100% {
+    color: #fff;
+    opacity: 1;
+    text-shadow: 0px 0px 2px #fff, 1px 1px 4px rgba(0,0,0,0.7);
+ }
+}
+
+#container{
+  padding-top: 60px;
+}
