--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,12 @@
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
   </head>
+  <div id="header" class="header">
+  <%= render '../views/partials/header' %>
+  </div>
   <body>
   <main>
-  <div id="container" class="padding-bottom-100">
-    <%= render '../views/partials/header' %>
+  <div id="container" class="padding-bottom-100 padding-top-60">
     <%= yield %>
     </div>
   </main>
