--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,7 +15,14 @@
         <%= f.input :user_name, required: true %>
         <%= f.input :address, required: true %>
         <%= f.input :gender, required: true, :collection => %w[Male Female] %>
-        <%= f.input :birth_date, required: true %>
+
+        <div class="input-field">
+          <input data-birthdate='30/6/1988' name="user[birth_date]" ng-model="user.birth_date" type="text" class="datepicker" materialize-date-picker readonly />
+          <label ng-class="{active: user.birth_date.length}">
+          Birth Date
+          </label>
+        </div>
+
         <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
         <%= f.input :password_confirmation, required: true %>
       </div>
@@ -28,3 +35,28 @@
     <%= render "devise/shared/links" %>
   </div>
 </div>
+
+
+<script>
+  $(document).ready(function(){
+    // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
+    $('.datepicker').pickadate({
+      selectMonths: true, // Creates a  dropdown to control month
+      selectYears: 100,
+      max: true // Creates a dropdown of 15 years to control year
+
+    });
+    var $input = $('.datepicker').pickadate()
+    var date = $('.datepicker').data('birthdate')
+    // Use the picker object directly.
+    var picker = $input.pickadate('picker')
+    // Using JavaScript Date objects.
+    picker.set('select', new Date(date))
+    $(".datepicker").change(function() {
+      date = new Date($(".datepicker").val())
+      date = [date.getDate(), date.getMonth() + 1, date.getFullYear()].join('/');
+      $(".datepicker").val(date)
+    });
+
+  });
+</script>
