--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -115,6 +115,10 @@ textarea.materialize-textarea {
   border: 1px solid #eee !important;
 }
 
+select {
+  display: inline-block !important;
+}
+
 // .input-field-form{
 //   background-color: white;
 // }
