--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,15 @@
     <link rel="stylesheet" type="text/css" href="css/jTinder.css">
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+    <link href="nouislider.min.css" rel="stylesheet">
   </head>
+
   <div id="header" class="header">
   <%= render '../views/partials/header' %>
   </div>
   <body>
+  <script src="nouislider.min.js"></script>
+
   <main>
   <div id="container" class="padding-bottom-100 padding-top-60">
     <%= yield %>
