--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,35 +1,40 @@
 
 <div class="row">
   <div class="col s12 m6 offset-m3 center container-full-width">
-<% if @not_found %>
-<h1>Not found Motherfucka !</h1>
-<%end%>
-<div class="items">
-  <% @items.each do |c| %>
-  <br/>
-  <div class="item">
+    <% if @not_found %>
+    <h1>Not found Motherfucka !</h1>
+    <%end%>
+    <div class="items">
+      <% @items.each do |c| %>
+        <div class="item" data-item='<%= c.id %>'>
 
-  <%= c.tumbnail_img %><br/>
-  <h1><%= c.name %><br/></h1>
-  <p>Price: $<%= c.price %> $<br/></p>
-  <p><%= c.description %><br/></p>
-  <p><%= c.gender %><br/></p>
-  <p><%= c.brand.name %><br/></p>
+          <%= c.tumbnail_img %><br/>
+          <h1><%= c.name %><br/></h1>
+          <p>Price: $<%= c.price %> $<br/></p>
+          <p><%= c.description %><br/></p>
+          <p><%= c.gender %><br/></p>
+          <p><%= c.brand.name %><br/></p>
 
-  <p><%= c.colors.first.name %><br/></p>
-<% item_like = current_user.item_likes.find{ |item_like| item_like if item_like.item_id == c.id} %>
-  <p><%= c.item_likes.count %> likes<br/></p>
-    <% if item_like.nil? %>
-
-  <%= link_to 'like', item_item_likes_path(c.id, item_like), method: :post %>
-  <% else %>
-  <%= link_to 'unlike', item_item_like_path(c.id, item_like), method: :delete %><br/>
- <% end %>
-
+          <p><%= c.colors.first.name %><br/></p>
+          <% item_like = current_user.item_likes.find{ |item_like| item_like if item_like.item_id == c.id } %>
+          <p>
+            <span class="like-count"> <%= c.item_likes.count %></span> likes<br/>
+          </p>
+          <div class="like-btn">
+            <% if item_like.nil? %>
+              <%= link_to 'like', item_item_likes_path(c.id, item_like), method: :post, remote: true %>
+              <p>Like this</p>
+            <% end %>
+          </div>
+          <div class="unlike-btn">
+            <% unless item_like.nil? %>
+              <%= link_to 'unlike', item_item_like_path(c.id, item_like), method: :delete, remote: true %><br/>
+              <% end %>
+          </div>
+        </div>
+      <% end %>
+    </div>
   </div>
-  <% end %>
-  </div>
-</div>
 </div>
 
 
