--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,19 +10,17 @@ Email: <%= current_user.email %><br/>
 
 
 <% current_user.liked_items.each do |item| %>
-<%= item.tumbnail_img %><br/>
-<%= item.name %><br/>
-<%= item.price %> $<br/>
-<%= item.description %><br/>
-<%= item.gender %><br/>
-<%= item.brand.name %><br/>
-<%= item.colors.map(&:name).join(', ') %><br/>
-<% item_like = current_user.item_likes.find{ |item_like| item_like if item_like.item_id == item.id} %>
-  <%= item.item_likes.count %> likes<br/>
-  <% if item_like.nil? %>
-  <%= link_to 'like', item_item_likes_path(item.id, item_like), method: :post %>
-  <% else %>
-  <%= link_to 'unlike', item_item_like_path(item.id, item_like), method: :delete %><br/>
-  <% end %>
-  <br/>
+<div class='profil item' data-item='<%= item.id %>'>
+  <%= item.tumbnail_img %><br/>
+  <%= item.name %><br/>
+  <%= item.price %> $<br/>
+  <%= item.description %><br/>
+  <%= item.gender %><br/>
+  <%= item.brand.name %><br/>
+  <%= item.colors.map(&:name).join(', ') %><br/>
+  <% item_like = current_user.item_likes.find{ |item_like| item_like if item_like.item_id == item.id} %>
+    <%= item.item_likes.count %> likes<br/>
+    <%= link_to 'unlike', item_item_like_path(item.id, item_like), remote: true, method: :delete %><br/>
+    <br/>
+</div>
 <% end %>
