--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,6 +21,8 @@ Email: <%= current_user.email %><br/>
   <% item_like = current_user.item_likes.find{ |item_like| item_like if item_like.item_id == item.id} %>
     <%= item.item_likes.count %> likes<br/>
     <%= link_to 'unlike', item_item_like_path(item.id, item_like), remote: true, method: :delete %><br/>
+   <button class="btn btn-primary">Order</button>
+    <% end %>
     <br/>
 </div>
-<% end %>
+
