--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,15 @@
+<div class="profile-header"></div>
 <h2>Profile Page</h2><br/>
 <h3><%= current_user.user_name %></h3>
 
+<div class="profile-headerbox">
 <h5>
 First Name: <%= current_user.first_name %><br/>
 Last Name: <%= current_user.last_name %><br/>
 Gender: <%= current_user.gender %><br/>
 Email: <%= current_user.email %><br/>
 </h5>
-
+</div>
 
 <% current_user.liked_items.each do |item| %>
 <%= item.tumbnail_img %><br/>
