--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,8 +13,9 @@
 @import "components/index";
 @import "pages/index";
 @import "vendor/index";
-
+@import "profileheader";
 @import "materialize";
+
 
 .full-screen-video{
   z-index: -10;
