--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,24 +1,5 @@
-<div class="row">
-  <div class="col s12 m6">
-  <div class="card sticky-action">
-    <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="images/office.jpg">
-    </div>
-    <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-      <p><a href="#">This is a link</a></p>
-    </div>
-    <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-      <p>Here is some more information about this product that is only revealed once clicked on.</p>
-    </div>
-    <div class="card-action">
-        <a href="#">This is a link</a>
-        <a href="#">This is a link</a>
-    </div>
-  </div>
-  </div>
-</div>
+
+
 
 <div class="row">
   <div class="col s12 m6">
@@ -108,3 +89,63 @@
   </div>
 </div>
 
+<div class="row">
+  <div class="col s12 m6">
+  <div class="card sticky-action">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="images/office.jpg">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+      <p><a href="#">This is a link</a></p>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+      <p>Here is some more information about this product that is only revealed once clicked on.</p>
+    </div>
+    <div class="card-action">
+        <a href="#">This is a link</a>
+        <a href="#">This is a link</a>
+    </div>
+  </div>
+  </div>
+</div>
+
+<script>
+  $(document).ready(function() {
+  var classes = '';
+  $('input[type=radio][name=button]').each(function() {
+    classes += this.value+' ';
+  });
+  $('input[type=radio][name=button]').change(function() {
+    $('header > .btn').removeClass(classes).addClass('btn '+this.value);
+  });
+  $('input[type=radio][name=size]').change(function() {
+    $('body').removeClass().addClass(this.value);
+  });
+  $('input[type=radio][name=color]').change(function() {
+    $('header').removeClass().addClass(this.value);
+  });
+  $('#next').click(function(event) {
+    event.preventDefault();
+    $('input:checked[type=radio][name=button]').parent().next().find('input').click();
+  })
+  $('#prev').click(function(event) {
+    event.preventDefault();
+    $('input:checked[type=radio][name=button]').parent().prev().find('input').click();
+  })
+  $('header > .btn').click(function(event) {
+    event.preventDefault();
+    var randomEl = Math.floor((Math.random() * $('input[type=radio][name=button]').length));
+    $('input:eq(' + randomEl + ')[type=radio][name=button]').click();
+  })
+  $(".btn").click(function(event){
+    if($(this).find("b.drop").length == 0) { $(this).prepend("<b class='drop'></b>"); }
+    drop = $(this).find("b.drop").removeClass("animate");
+    x = event.pageX - drop.width()/2 - $(this).offset().left;
+    y = event.pageY - drop.height()/2 - $(this).offset().top;
+    drop.css({top: y+'px', left: x+'px'}).addClass("animate");
+  })
+
+});
+</script>
